--- a/MyMojo/Views/Home/Index.cshtml
+++ b/MyMojo/Views/Home/Index.cshtml
@@ -3,21 +3,21 @@
 }
 <section class="section summary-section">
     <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
-    <div class="summary wow">
-        <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="http://themes.3rdwavemedia.com/website-templates/orbit-free-resume-cv-template-for-developers/" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+    <div class="summary">
+        <p>Accomplished and certified software development professional with 5 years experience leading development teams using agile methodologies and 10 years experience delivering Web and Windows based solutions by leveraging the .NET framework.  Exceptional analysis and development skills with extensive experience in C#, ASP.NET, WinForms/WPF/Windows Services, XML and Microsoft SQL Server with a proven track record delivering quality results.  An effective communicator with excellent interpersonal, managerial and organizational skills.</p>
     </div><!--//summary-->
 </section><!--//section-->
 
 <section class="section experiences-section">
     <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
 
-    <div class="item wow">
+    <div class="item">
         <div class="meta">
             <div class="upper-row">
-                <h3 class="job-title">Lead Developer</h3>
-                <div class="time">2015 - Present</div>
+                <h3 class="job-title">Development Manager</h3>
+                <div class="time">May 2014 - Present</div>
             </div><!--//upper-row-->
-            <div class="company">Startup Hubs, San Francisco</div>
+            <div class="company">Financial Software Limited - London, UK</div>
         </div><!--//meta-->
         <div class="details">
             <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
@@ -25,16 +25,20 @@
         </div><!--//details-->
     </div><!--//item-->
 
-    <div class="item wow">
+    <div class="item">
         <div class="meta">
             <div class="upper-row">
-                <h3 class="job-title">Senior Software Engineer</h3>
-                <div class="time">2014 - 2015</div>
+                <h3 class="job-title">Development Lead (Contract)</h3>
+                <div class="time">Jan 2014 - Feb 2014</div>
             </div><!--//upper-row-->
-            <div class="company">Google, London</div>
+            <div class="company">helloU - London, UK</div>
         </div><!--//meta-->
         <div class="details">
-            <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            <p>Brought in for a short-term contract role to evaluate HelloU’s technology stack and assist their team with changing the underlining technology in order to support the new business direction.  Supported the previous technology during the transformation.</p>
+
+            <p>Successfully implemented a Wordpress site effectively allowing HelloU to triple their traffic at less than half their costs.  Allowed the front-end developers to rapidly provide functionality without a lot of development effort or time.  As well as enabled the content writers to add new posts without any involvement from the development team.</p>
+
+            <p>Implemented continuous deployment system with Jenkins in order to automate and improve the process of software delivery.  Provided structure and visibly into the development process using Kanban.</p>
 
         </div><!--//details-->
     </div><!--//item-->
@@ -42,13 +46,19 @@
     <div class="item wow">
         <div class="meta">
             <div class="upper-row">
-                <h3 class="job-title">UI Developer</h3>
-                <div class="time">2012 - 2014</div>
+                <h3 class="job-title">Technical Team Lead</h3>
+                <div class="time">Nov 2012 - Nov 2013</div>
             </div><!--//upper-row-->
-            <div class="company">Amazon, London</div>
+            <div class="company">Fourth - London, UK</div>
         </div><!--//meta-->
         <div class="details">
-            <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            <p>Managed a group of 9 developers, responsible for the technical leadership, stakeholder management, Scrum Master role and delivery of a Labour (HR & Rota) module of a SaaS product for the hospitality industry.  Co-founded an initiative for the adoption of Agile methodologies and modern software practices such as TDD, BDD, automated testing and CI/CD across the technology division.</p>
+
+            <p>Successfully championed with both technical and non-technical stakeholders the benefits of TDD and worked closely with the team to create a plan for adoption around one of the more problematic and difficult areas of code that included applying SOLID principles to create a loosely coupled application architecture, cross team resource up-skilling, group as well as peer code reviews, and progress reporting.</p>
+
+            <p>Created two interdisciplinary project Scrum teams and a maintenance Kanban team on my second day to demonstrate and set realistic expectations of scope with the product management team.  Worked closely by providing coaching and guidance with 13 other delivery teams to rollout Agile across the technology division.</p>
+
+            <p>Setup a Continuous Integration and Delivery system using Jekins, msbuild and msdeploy which reduced the number of deployment defects to nearly zero and the UAT phase from 4 weeks to less than a week.</p>
         </div><!--//details-->
     </div><!--//item-->
 
