--- a/MyMojo/Views/Shared/_Layout.cshtml
+++ b/MyMojo/Views/Shared/_Layout.cshtml
@@ -35,25 +35,25 @@
 
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: chris@mymojo.ca">chris@mymoj.ca</a></li>
+                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: chris@mymojo.ca">chris@mymojo.ca</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:07514816588">007514816588</a></li>
                     <li class="website"><i class="fa fa-globe"></i><a href="http://mymojo.ca">mymojo.ca</a></li>
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>
+                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/chris-wallace" target="_blank">linkedin.com/in/chris-wallace</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/wallaceiam" target="_blank">github.com/wallaceiam</a></li>
-                    <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/wallaceiam" target="_blank">@@wallaceiam</a></li>
+                    @*<li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/wallaceiam" target="_blank">@@wallaceiam</a></li>*@
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
-                    <h4 class="degree">MSc in Computer Science</h4>
-                    <h5 class="meta">University of London</h5>
-                    <div class="time">2011 - 2012</div>
+                    <h4 class="degree">Bachelor of Arts, Philosophy</h4>
+                    <h5 class="meta">University of Waterloo</h5>
+                    <div class="time">1998 - 2001</div>
                 </div><!--//item-->
                 <div class="item">
-                    <h4 class="degree">BSc in Applied Mathematics</h4>
-                    <h5 class="meta">Bristol University</h5>
-                    <div class="time">2007 - 2011</div>
+                    <h4 class="degree">A-Levels in Maths, English &amp; Economics</h4>
+                    <h5 class="meta">Brillantmont Internation College</h5>
+                    <div class="time">1995 - 1998</div>
                 </div><!--//item-->
             </div><!--//education-container-->
 
