--- a/MyMojo/Views/Shared/_Layout.cshtml
+++ b/MyMojo/Views/Shared/_Layout.cshtml
@@ -57,14 +57,19 @@
                 </div><!--//item-->
             </div><!--//education-container-->
 
-            <div class="languages-container container-block">
-                <h2 class="container-block-title">Languages</h2>
-                <ul class="list-unstyled interests-list">
-                    <li>English <span class="lang-desc">(Native)</span></li>
-                    <li>French <span class="lang-desc">(Professional)</span></li>
-                    <li>Spanish <span class="lang-desc">(Professional)</span></li>
-                </ul>
-            </div><!--//interests-->
+            <div class="education-container container-block">
+                <h2 class="container-block-title">Certifications</h2>
+                <div class="item">
+                    <h4 class="degree">Microsoft 70-315</h4>
+                    <h5 class="meta">Developing and Implementing Web Applications with Microsoft Visual C# .NET and Microsoft Visual Studio .NET</h5>
+                    <div class="time">2005</div>
+                </div><!--//item-->
+                <div class="item">
+                    <h4 class="degree">Microsoft 70-316</h4>
+                    <h5 class="meta">Developing and Implementing Windows-based Applications with Microsoft Visual C# .NET and Microsoft Visual Studio .NET</h5>
+                    <div class="time">2005</div>
+                </div><!--//item-->
+            </div><!--//certifications-->
 
             <div class="interests-container container-block">
                 <h2 class="container-block-title">Interests</h2>
@@ -83,6 +88,8 @@
 
 
         </div><!--//main-body-->
+
+        <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
     </div>
 
     <footer class="footer">
@@ -95,5 +102,18 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-7881966-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
