--- a/MyMojo/Content/Site.css
+++ b/MyMojo/Content/Site.css
@@ -214,6 +214,11 @@ p {
   top: 0;
   color: #97AAC3;
 }
+.main-wrapper .company-logo {
+  position: absolute;
+  right: 0;
+  /*top: -20px;*/
+}
 .main-wrapper .company {
   margin-bottom: 10px;
   color: #97AAC3;
