--- a/MyMojo/Views/Home/Index.cshtml
+++ b/MyMojo/Views/Home/Index.cshtml
@@ -5,14 +5,14 @@
 <section class="section summary-section">
     <h2 class="section-title"><i class="fa fa-info"></i>Objective</h2>
     <div class="summary">
-        <p>A position as a Development Manager/Technical Team Lead where my technical strengths and leadership skills will be utilized to deliver .NET solutions that support challenging and interesting corporate goals.</p>
+        <p>A position as a hands-on <b>Senior C# Developer/Technical Team Lead</b> where my technical skills and strengths will be utilized to deliver challenging and interesting .NET solutions in line with organizational goals.</p>
     </div><!--//summary-->
 </section><!--//section-->
 
 <section class="section summary-section">
     <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
     <div class="summary">
-        <p>Accomplished and certified software development professional with 5 years experience leading development teams using agile methodologies and 10 years experience delivering Web and Windows based solutions by leveraging the .NET framework.  Exceptional analysis and development skills with extensive experience in C#, ASP.NET, WinForms/WPF/Windows Services, XML and Microsoft SQL Server with a proven track record delivering quality results.  An effective communicator with excellent interpersonal, managerial and organizational skills.</p>
+        <p>Accomplished and <b>certified software development professional</b> with 6+ years experience leading and managing development teams using <b>Agile</b> methodologies and 12+ years experience delivering <b>Web</b> and <b>Windows</b> based solutions by leveraging the .NET framework.  Exceptional analysis and development skills with extensive experience in <b>C#</b>, <b>ASP.NET MVC</b>, <b>RESTful Web</b> and <b>Windows Services</b>, and data stores including <b>MongoDB</b> and <b>Microsoft SQL Server</b>. A proven track record delivering quality results and an effective communicator with excellent interpersonal, managerial and organizational skills.</p>
     </div><!--//summary-->
 </section><!--//section-->
 
@@ -22,7 +22,7 @@
         <div class="item">
             <h3 class="level-title">Managing</h3>
             <div class="level-bar">
-                <div class="level-bar-inner" data-level="90%">
+                <div class="level-bar-inner" data-level="97%">
                 </div>
             </div><!--//level-bar-->
         </div><!--//item-->
@@ -94,6 +94,9 @@
         <div class="meta">
             <div class="upper-row">
                 <h3 class="job-title">Development Manager</h3>
+                <div class="company-logo">
+                    <img src="https://media.licdn.com/media/p/2/005/082/04e/1c2e498.png" />
+                </div>
                 <div class="time">May 2014 - Present</div>
             </div><!--//upper-row-->
             <div class="company">Financial Software Limited - London, UK</div>
