--- a/MyMojo/Views/Home/Index.cshtml
+++ b/MyMojo/Views/Home/Index.cshtml
@@ -19,10 +19,67 @@
 <section class="skills-section section">
     <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
     <div class="skillset wow">
+
         <div class="item">
-            <h3 class="level-title">Managing</h3>
+            <h3 class="level-title">C# &amp; .NET</h3>
             <div class="level-bar">
-                <div class="level-bar-inner" data-level="97%">
+                <div class="level-bar-inner" data-level="100%">
+                    <span>12+ years</span>
+                </div>
+            </div><!--//level-bar-->
+        </div><!--//item-->
+
+        <div class="item">
+            <h3 class="level-title">ASP.NET MVC &amp; Web API</h3>
+            <div class="level-bar">
+                <div class="level-bar-inner" data-level="90%">
+                    <span>6+ years</span>
+                </div>
+            </div><!--//level-bar-->
+        </div><!--//item-->
+
+        <div class="item">
+            <h3 class="level-title">SOLID &amp; Design Patterns</h3>
+            <div class="level-bar">
+                <div class="level-bar-inner" data-level="90%">
+                    <span>6+ years</span>
+                </div>
+            </div><!--//level-bar-->
+        </div><!--//item-->
+
+
+        <div class="item">
+            <h3 class="level-title">SQL Server &amp; T-SQL</h3>
+            <div class="level-bar">
+                <div class="level-bar-inner" data-level="85%">
+                    <span>6+ years</span>
+                </div>
+            </div><!--//level-bar-->
+        </div><!--//item-->
+
+        <div class="item">
+            <h3 class="level-title">TFS &amp; CI</h3>
+            <div class="level-bar">
+                <div class="level-bar-inner" data-level="90%">
+                    <span>6+ years</span>
+                </div>
+            </div><!--//level-bar-->
+        </div><!--//item-->
+
+        <div class="item">
+            <h3 class="level-title">jQuery &amp; Javascript</h3>
+            <div class="level-bar">
+                <div class="level-bar-inner" data-level="80%">
+                    <span>4+ years</span>
+                </div>
+            </div><!--//level-bar-->
+        </div><!--//item-->
+
+        <div class="item">
+            <h3 class="level-title">HTML5 &amp; CSS3</h3>
+            <div class="level-bar">
+                <div class="level-bar-inner" data-level="70%">
+                    <span>2+ years</span>
                 </div>
             </div><!--//level-bar-->
         </div><!--//item-->
@@ -31,54 +88,16 @@
             <h3 class="level-title">Agile Methodologies</h3>
             <div class="level-bar">
                 <div class="level-bar-inner" data-level="95%">
+                    <span>6+ years</span>
                 </div>
             </div><!--//level-bar-->
         </div><!--//item-->
 
         <div class="item">
-            <h3 class="level-title">C# &amp; .NET</h3>
+            <h3 class="level-title">Managing</h3>
             <div class="level-bar">
-                <div class="level-bar-inner" data-level="98%">
-                </div>
-            </div><!--//level-bar-->
-        </div><!--//item-->
-
-        <div class="item">
-            <h3 class="level-title">Javascript &amp; jQuery</h3>
-            <div class="level-bar">
-                <div class="level-bar-inner" data-level="85%">
-                </div>
-            </div><!--//level-bar-->
-        </div><!--//item-->
-
-        <div class="item">
-            <h3 class="level-title">Angular</h3>
-            <div class="level-bar">
-                <div class="level-bar-inner" data-level="58%">
-                </div>
-            </div><!--//level-bar-->
-        </div><!--//item-->
-
-        <div class="item">
-            <h3 class="level-title">HTML5 &amp; CSS</h3>
-            <div class="level-bar">
-                <div class="level-bar-inner" data-level="95%">
-                </div>
-            </div><!--//level-bar-->
-        </div><!--//item-->
-
-        <div class="item">
-            <h3 class="level-title">Ruby on Rails</h3>
-            <div class="level-bar">
-                <div class="level-bar-inner" data-level="5%">
-                </div>
-            </div><!--//level-bar-->
-        </div><!--//item-->
-
-        <div class="item">
-            <h3 class="level-title">Sketch &amp; Photoshop</h3>
-            <div class="level-bar">
-                <div class="level-bar-inner" data-level="60%">
+                <div class="level-bar-inner" data-level="90%">
+                    <span>6+ years</span>
                 </div>
             </div><!--//level-bar-->
         </div><!--//item-->
@@ -95,15 +114,22 @@
             <div class="upper-row">
                 <h3 class="job-title">Development Manager</h3>
                 <div class="company-logo">
-                    <img src="https://media.licdn.com/media/p/2/005/082/04e/1c2e498.png" />
+                    <img src="~/Content/images/companies/fsl.png" />
                 </div>
                 <div class="time">May 2014 - Present</div>
             </div><!--//upper-row-->
             <div class="company">Financial Software Limited - London, UK</div>
         </div><!--//meta-->
         <div class="details">
-            <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+            <p>A client-facing position and involved in all aspects of the software development lifecycle, responsible for managing a small team of permanent and contract developers building and maintaining a Capital Gains Tax (CGT) Calculation and Reporting software used by Tier 1 financial organizations in both the UK and mainland Europe.</p>
+            <ul>
+                <li>Employed Agile methodologies to manage to aggressive timelines and multiple deliverables the flagship product’s, CGiX, annual release. Weekly progress and status updates provided to key stakeholders and other managers in the organization.</li>
+                <li>Resourced and introduced a small QA team to capture and define test cases, system and regression test plans, and introduce an Automated Test Framework using Selenium</li>
+                <li>Worked with key stakeholders to define, shape and deliver a new product offering allowing diversification and additional revenue streams</li>
+                <li>Advocated, mentored and code reviewed adoption of SOLIDD principles and unit tests in the flagship products legacy code-base.</li>
+                <li>Implemented continuous integration and deployment system with Team Foundation Server (TFS) and TeamCity in order to automate and improve of software delivery</li>
+
+            </ul>
         </div><!--//details-->
     </div><!--//item-->
 
@@ -111,6 +137,9 @@
         <div class="meta">
             <div class="upper-row">
                 <h3 class="job-title">Development Lead (Contract)</h3>
+                @*<div class="company-logo">
+                    <img src="~/Content/images/companies/hellou.png" />
+                </div>*@
                 <div class="time">January 2014 - February 2014</div>
             </div><!--//upper-row-->
             <div class="company">helloU - London, UK</div>
@@ -130,6 +159,9 @@
         <div class="meta">
             <div class="upper-row">
                 <h3 class="job-title">Technical Team Lead</h3>
+
+                @*<img class="company-logo" src="~/Content/images/companies/fourth.png" />*@
+
                 <div class="time">November 2012 - November 2013</div>
             </div><!--//upper-row-->
             <div class="company">Fourth - London, UK</div>
@@ -150,7 +182,34 @@
     <div class="item wow">
         <div class="meta">
             <div class="upper-row">
+                <h3 class="job-title">Technical Team Lead</h3>
+                @*<div class="company-logo">
+                    <img src="~/Content/images/companies/wintech.png" />
+                </div>*@
+                <div class="time">December 2011 - November 2012</div>
+            </div><!--//upper-row-->
+            <div class="company">Win Technologies - London, UK</div>
+        </div><!--//meta-->
+        <div class="details">
+            <p>Responsible for the technical direction of an in-house web application framework for the development of dynamic websites, and web services.  Managing a small group of developers in an Agile environment, built a back office system to manage the websites across 3 different product types and 17 different languages.</p>
+
+            <ul>
+                <li>Migrated the initial framework to ASP.NET MVC3 from WebForms allowing for the Design department to implement features requiring less custom code as well as increasing the flexibility for designs.</li>
+
+                <li>Worked with business stakeholders to redevelop large sections of legacy systems to be more in line with business needs as well as providing a back office configuration tool to allow non-technical personnel to manage website functionality.</li>
+
+                <li>Implemented a test environment for the QA department, custom build process to automated deployments as well as enforcing code quality standards within the development team.</li>
+            </ul>
+        </div><!--//details-->
+    </div><!--//item-->
+
+    <div class="item wow">
+        <div class="meta">
+            <div class="upper-row">
                 <h3 class="job-title">Senior .NET Developer</h3>
+                @*<div class="company-logo">
+                    <img src="~/Content/images/companies/livedrive.png" />
+                </div>*@
                 <div class="time">September 2010 - October 2011</div>
             </div><!--//upper-row-->
             <div class="company">Livedrive - London, UK</div>
@@ -270,14 +329,19 @@
 <section class="section projects-section">
     <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
     <div class="intro wow">
-        <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
+        <p>Just a few side projects or open source libraries I have developed.</p>
     </div><!--//intro-->
     <div class="item wow">
-        <span class="project-title"><a href="#hook">MotoBays</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span>
+        <span class="project-title"><a href="http://foodie.st" target="_blank">Foodie.St (In Progress)</a></span> -
+        <span class="project-tagline">A responsive website designed to locate and discover Food Trucks.  Writen with C#, MVC 5, CQRS/ES, MongoDB</span>
+    </div><!--//item-->
 
-    </div><!--//item-->
     <div class="item wow">
-        <span class="project-title"><a href="http://foodie.st" target="_blank">Foodie.St</a></span> -
-        <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>
+        <span class="project-title"><a href="https://itunes.apple.com/gb/app/motobays/id945467608?mt=8">MotoBays</a></span> - <span class="project-tagline">An iOS app allowing the user to find and navigate to free and paid Motorcycle Parking Bays in London.  Writen in Swift.</span>
     </div><!--//item-->
+
+    <div class="item wow">
+        <span class="project-title"><a href="https://itunes.apple.com/gb/app/cj-stats/id903673948?mt=8">CJ Stats</a></span> - <span class="project-tagline">An iOS app allowing the user to check their CJ Affiliate Publisher Stats. Writen in Objective C.</span>
+    </div><!--//item-->
+
 </section><!--//section-->
