Updating wording and spelling

--- a/MyMojo/Views/Home/Index.cshtml
+++ b/MyMojo/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 <section class="section summary-section">
     <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
     <div class="summary">
-        <p>Accomplished and <b>certified software development professional</b> with 6+ years experience leading and managing development teams using <b>Agile</b> methodologies and 12+ years experience delivering <b>Web</b> and <b>Windows</b> based solutions by leveraging the .NET framework.  Exceptional analysis and development skills with extensive experience in <b>C#</b>, <b>ASP.NET MVC</b>, <b>RESTful Web</b> and <b>Windows Services</b>, and data stores including <b>MongoDB</b> and <b>Microsoft SQL Server</b>. A proven track record delivering quality results and an effective communicator with excellent interpersonal, managerial and organizational skills.</p>
+        <p>Accomplished and <b>certified software development professional</b> with 12+ years experience delivering <b>Web</b> and <b>Windows</b> based solutions by leveraging the .NET Framework and 6+ years experience leading and managing development teams using <b>Agile</b> methodologies. Exceptional analysis and development skills with extensive experience in <b>C#</b>, <b>ASP.NET MVC</b>, <b>RESTful Web</b> and <b>Windows Services</b>, and data stores including <b>MongoDB</b> and <b>Microsoft SQL Server</b>. A proven track record delivering quality results and an effective communicator with excellent interpersonal, managerial and organizational skills.</p>
     </div><!--//summary-->
 </section><!--//section-->
 
@@ -121,13 +121,13 @@
             <div class="company">Financial Software Limited - London, UK</div>
         </div><!--//meta-->
         <div class="details">
-            <p>A client-facing position and involved in all aspects of the software development lifecycle, responsible for managing a small team of permanent and contract developers building and maintaining a Capital Gains Tax (CGT) Calculation and Reporting software used by Tier 1 financial organizations in both the UK and mainland Europe.</p>
+            <p>A client-facing position and involved in all aspects of the software development lifecycle, responsible for managing a small on and offshore team of permanent and contract developers building and maintaining a Capital Gains Tax (CGT) Calculation and Reporting software used by Tier 1 financial organizations in both the UK and mainland Europe.</p>
             <ul>
-                <li>Employed Agile methodologies to manage to aggressive timelines and multiple deliverables the flagship product’s, CGiX, annual release. Weekly progress and status updates provided to key stakeholders and other managers in the organization.</li>
-                <li>Resourced and introduced a small QA team to capture and define test cases, system and regression test plans, and introduce an Automated Test Framework using Selenium</li>
-                <li>Worked with key stakeholders to define, shape and deliver a new product offering allowing diversification and additional revenue streams</li>
-                <li>Advocated, mentored and code reviewed adoption of SOLIDD principles and unit tests in the flagship products legacy code-base.</li>
-                <li>Implemented continuous integration and deployment system with Team Foundation Server (TFS) and TeamCity in order to automate and improve of software delivery</li>
+                <li>Employed Agile methodologies to manage aggressive timelines and multiple deliverables of the flagship product’s, CGiX, annual release and client bespoke requirements. Weekly progress report and status updates provided to key stakeholders and other managers in the organization.</li>
+                <li>Resourced and introduced a small QA team to capture and define test cases, system and regression test plans, and introduce an Automated Test Framework using Selenium.</li>
+                <li>Worked with key stakeholders to define, shape and deliver a new product offering allowing diversification and additional revenue streams.</li>
+                <li>Advocated, mentored and code reviewed adoption of SOLIDD principles and unit tests in the flagship product's legacy code-base.</li>
+                <li>Implemented continuous integration and deployment system with Team Foundation Server (TFS) and TeamCity in order to automate and improve of software delivery.</li>
 
             </ul>
         </div><!--//details-->
