--- a/MyMojo/Views/Shared/_Layout.cshtml
+++ b/MyMojo/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                 <ul class="list-unstyled contact-list">
                     <li class="resume"><i class="fa fa-file-text"></i>@*<a href="~/Content/Chris Wallace - Curriculum Vitae.pdf">*@Curriculum Vitae@*</a>*@</li>
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: chris@mymojo.ca">chris@mymojo.ca</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:07514816588">007514816588</a></li>
+                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:07514816588">07514816588</a></li>
                     <li class="website"><i class="fa fa-globe"></i><a href="http://mymojo.ca">mymojo.ca</a></li>
                     <li class="address"><i class="fa fa-location-arrow"></i>London, UK</li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/chris-wallace" target="_blank">chris-wallace</a></li>
@@ -64,12 +64,12 @@
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
                     <h4 class="degree">Bachelor of Arts, Philosophy</h4>
-                    <h5 class="meta">University of Waterloo</h5>
+                    <h5 class="meta">University of Waterloo, Canada</h5>
                     <div class="time">1998 - 2001</div>
                 </div><!--//item-->
                 <div class="item">
                     <h4 class="degree">A-Levels in Maths, English &amp; Economics</h4>
-                    <h5 class="meta">Brillantmont Internation College</h5>
+                    <h5 class="meta">Brillantmont International College, Switzerland</h5>
                     <div class="time">1995 - 1998</div>
                 </div><!--//item-->
             </div><!--//education-container-->
@@ -81,7 +81,7 @@
                 <ul class="list-unstyled interests-list">
                     <li>Snowboarding</li>
                     <li>Traveling</li>
-                    <li>Learning to Play the Guitar</li>
+                    <li>Learning to play the Guitar</li>
                 </ul>
             </div><!--//interests-->
 
